# serverless-autoresearch

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  config.yaml  config.yaml.example  prepare.py  program.md  pyproject.toml  train.py
.claude/commands/: contribute.md
data/raw/: README.md
docs/: architecture.drawio  comparison-diagrams.drawio  comparison-report.md  experiment-report-001.md  gpu-cost-analysis.md  insights.md  reddit-post.md  spot-capacity-guide.md
docs/vibe-coding-tutorial/: 01-the-idea.md  02-building-the-pipeline.md  03-infrastructure-adventures.md  04-first-experiment.md  05-the-batch-size-trap.md  06-autonomous-evolution.md  07-insights-and-skills.md  08-results-and-comparison.md  README.md
experiments/002-optimization-l40s/: README.md  research-notes.md  results-summary.md
experiments/003-h100-comparison/: README.md  results-summary.md
infrastructure/: Dockerfile  build_and_push.sh  requirements-train.txt  setup_iam.sh
pipeline/: __init__.py  batch_launcher.py  candidate_generator.py  orchestrator.py  result_collector.py  selection.py
sagemaker/: entry_point.py
scripts/: cost_report.py  prepare_s3.py  run_single.py
src/pipeline/: batch_launcher.py  candidate_generator.py  orchestrator.py  result_collector.py  selection.py
src/sagemaker/: train_wrapper.py
src/scripts/: cost_report.py  prepare_s3.py  run_single.py
